# ComfyEmotionGen

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  Dockerfile  Dockerfile.all-in-one  README.md  TAG_SYNTAX.md  USER_MANUAL.md  api_docs.md  comfy_client.py  danbooru_tags.py  debug_comfy_api.py  doc.md  docker-compose.yml  emotions.json  entrypoint.sh  extract_lang.py  gui_gallery.py  gui_lora.py  gui_main.py  install.ps1  install.sh  install_comfy.ps1  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  run.ps1  run.sh  start.bat  tag_parser.py  test_import.py  test_parser_unit.py  workflow.json  workflow_manager.py
.omp/: mcp.json
backend/: .dockerignore  DSL_REFERENCE.md  Dockerfile  _version.py  comfy_client.py  example.ceg  example.template  job_store.py  jobs.py  prompt_dsl.lark  prompt_dsl.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run.py  server.py  test_algebraic.template  test_curation.py  test_features.py  test_seed_helper.py  test_server.py  test_set_combine.template  test_structure.py  webhook.py  worker_pool.py
backend/src/: job_store.py  jobs.py  models.py  prompt_dsl.py  run.py  server.py  webhook.py  worker_pool.py  workflow_models.py
backend/src/test/: test_curation.py  test_features.py  test_seed_helper.py  test_server.py
backend/src/worker/: __init__.py  comfyui.py  nai.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_curation.py  test_health_and_render.py  test_settings_and_webhooks.py  test_websocket.py  test_workers_and_db.py
(+541 files in other folders)
