[project]
name = "comfyemotiongen-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
strict = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "server,src.server,backend.src.server"